src/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trips-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "false"
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/poi
        pathType: Prefix
        backend:
          service:
            name: poi-service
            port:
              number: 80
      - path: /api/trips
        pathType: Prefix
        backend:
          service:
            name: trips-service
            port:
              number: 80
      - path: /api/user
        pathType: Prefix
        backend:
          service:
            name: userprofile-service
            port:
              number: 80
      - path: /api/user-java
        pathType: Prefix
        backend:
          service:
            name: user-java-service
            port:
              number: 80
