src/ingress-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trips-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "false"
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tripviewer-service
            port:
              number: 80
